# passwords

./: .prettierignore  README.md  i18n.js  jsconfig.json  package-lock.json  package.json  passwords.config.js  tailwind.config.js
.github/workflows/: main.yml
app/: layout.jsx  page.jsx
components/: Authentication.jsx  Dashboard.jsx  EmptyState.jsx  Header.jsx  PasswordGenerator.jsx  PasswordStrength.jsx  Passwords.jsx  SearchBar.jsx  SelectMenu.jsx  Sidebar.jsx
components/Cards/: BankAccountCard.jsx  CreditCardCard.jsx  EmailAccountCard.jsx  IdentificationDocumentCard.jsx  NoteCard.jsx  SocialMediaAccountCard.jsx  WebLoginCard.jsx  WiFiPasswordCard.jsx
components/Dialog/: AddNewPasswordDialog.jsx  DeletePasswordDialog.jsx  EditPasswordDialog.jsx  PasswordDialog.jsx
components/Dialogs/: DeletePasswordDialog.jsx  PasswordDialog.jsx
components/Form/: AddressForm.jsx  BankAccountForm.jsx  CreditCardForm.jsx  EmailAccountForm.jsx  IdentificationDocumentForm.jsx  NoteForm.jsx  PasswordForm.jsx  SocialMediaAccountForm.jsx  WebLoginForm.jsx  WiFiPasswordForm.jsx
components/Forms/: BankAccountForm.jsx  CreditCardForm.jsx  EmailAccountForm.jsx  IdentificationDocumentForm.jsx  NoteForm.jsx  (+4 more)
constants/: componentMappings.jsx
data/: formTypes.jsx  locations.js  passwordIcons.jsx  passwordTypeStates.js  passwordTypes.js  sidebarContents.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
styles/: globals.css
utils/: addNewPassword.js  calculateStrength.js  generatePassword.js  handleAuthentication.js  savePasswords.js  updatePassword.js
(+8 files in other folders)
