[package]
name = "passwords"
version = "0.1.0"
description = "Easily secure and manage passwords with a desktop app powered by Tauri and Next.js."
authors = ["Mustafa Pekkirişci"]
license = "MIT"
repository = "https://github.com/pekkiriscim/passwords"
default-run = "passwords"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["fs-create-dir", "fs-exists", "fs-read-file", "fs-write-file"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
